--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -25,7 +25,7 @@
     <div class="d-flex align-items-center justify-content-between">
       <a href="/" class="logo d-flex align-items-center">
         <img src="{{ url_for('static', filename='assets/img/logo.png') }}" alt="">
-        <span class="d-none d-lg-block">Confidencia</span>
+        <span class="d-block">Confidencia</span>
       </a>
       <i class="bi bi-list toggle-sidebar-btn"></i>
     </div>
