Implementada página de sucesso para reclamações com código e prazo útil

--- a/templates/public/denuncia.html
+++ b/templates/public/denuncia.html
@@ -1,6 +1,6 @@
 {% extends "public/index.html" %}
 
-{% block title %}Fazer Denúncia - Sistema Confidencia{% endblock %}
+{% block title %}{% endblock %}
 
 {% block content %}
 <div class="pagetitle">
