--- a/templates/public/reclamacao.html
+++ b/templates/public/reclamacao.html
@@ -1,5 +1,5 @@
 {% extends "public/index.html" %}
-{% block title %}Fazer Reclamação - Sistema Confidencia{% endblock %}
+{% block title %}{% endblock %}
 
 {% block content %}
 <div class="pagetitle">
